# cauth

./: .gitignore  .gitreview  CHANGELOG  README.md  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
cauth/: auth.py
cauth/auth/: apikey.py  base.py  bitbucket.py  github.py  google.py  oauth2.py  openid.py  openid_connect.py  password.py
cauth/controllers/: apikey.py  base.py  github.py  introspection.py  oauth2.py  openid.py  openid_connect.py  root.py
cauth/model/: __init__.py  db.py
cauth/service/: base.py  gerrit.py  managesf.py  redmine.py
cauth/templates/: login.html
cauth/tests/: common.py  test_auth_plugins.py  test_service_plugins.py  test_units.py
cauth/utils/: common.py  userdetails.py
doc/: Makefile
doc/source/: about.rst  authentication.rst  conf.py  configuration.rst  index.rst  installation.rst  plugins.rst  services.rst
etc/: app.wsgi  component.site  config.py
releasenotes/notes/: github-mail-fix-066bdadbfa394d41.yaml  openid_connect-10c3133fad0d4efb.yaml
