[metadata]
name = cauth
summary = Multiprotocol SSO auth frontend using apache mod_authpub_tkt
description-file = README.md

[files]
packages = cauth

[entry_points]
cauth.authentication =
    GithubPersonalAccessToken = cauth.auth.github:GithubPersonalAccessTokenAuthPlugin
    Github = cauth.auth.github:GithubAuthPlugin
    Google = cauth.auth.google:GoogleAuthPlugin
    BitBucket = cauth.auth.bitbucket:BitBucketAuthPlugin
    Password = cauth.auth.password:PasswordAuthPlugin
    OpenID = cauth.auth.openid:OpenIDAuthPlugin
    OpenIDConnect = cauth.auth.openid_connect:OpenIDConnectAuthPlugin
    APIKey = cauth.auth.apikey:APIKeyAuthPlugin
cauth.service =
    gerrit = cauth.service.gerrit:GerritServicePlugin
    redmine = cauth.service.redmine:RedmineServicePlugin
    managesf = cauth.service.managesf:ManageSFServicePlugin
